<resources>
    <string name="app_name">Patriots Advisment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="core">Core</string>
    <string name="upper">Upper Division</string>
    <string name="lower">Lower Division</string>
    <string name="overall">Overall Progress</string>
    <string name="student">Placeholder Student</string>
    <string name="gpalabel">GPA</string>
    <string name="advisor">Adviser: </string>
    <string name="email">email: </string>
    <string name="phone">Phone: </string>
    <string name="login">Login</string>
</resources>
